--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "nuxt dev"
   },
   "dependencies": {
-    "mongodb": "5.6.0"
+    "mongodb": "5.7.0"
   },
   "devDependencies": {
     "@types/node": "18.16.19",
     "nuxt": "3.6.5"
   },
-  "description": "A simple way to use mongo in our project. Just add your db credentials and you can use the connection from anywhere in the app.",
+  "description": "A simple way to use mongoDB in your Nuxt 3 project.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/timb-103/nuxt-mongodb.git"
