--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
   "name": "nuxt-mongodb",
   "version": "1.0.6",
-  "type": "module",
-  "main": "./nuxt.config.ts",
-  "scripts": {
-    "dev": "nuxi dev .playground",
-    "build": "nuxt build .playground",
-    "generate": "nuxt generate .playground",
-    "preview": "nuxt preview .playground",
-    "postinstall": "nuxt prepare .playground"
-  },
-  "dependencies": {
-    "mongodb": "5.7.0",
-    "console-log-colors": "0.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.16.19",
-    "nuxt": "3.6.5"
-  },
   "description": "A simple way to use mongoDB in your Nuxt 3 project.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/timb-103/nuxt-mongodb.git"
   },
-  "keywords": [
-    "nuxt",
-    "mongodb"
-  ],
-  "author": "Tim B",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/timb-103/nuxt-mongodb/issues"
+  "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
   },
-  "homepage": "https://github.com/timb-103/nuxt-mongodb#readme"
+  "main": "./dist/module.cjs",
+  "types": "./dist/types.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "prepack": "nuxt-module-build",
+    "dev": "nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "release": "npm run prepack && changelogen --release && npm publish && git push --follow-tags"
+  },
+  "dependencies": {
+    "@nuxt/kit": "3.6.5",
+    "defu": "6.1.2",
+    "mongodb": "5.7.0",
+    "console-log-colors": "0.4.0"
+  },
+  "devDependencies": {
+    "@nuxt/module-builder": "0.4.0",
+    "@nuxt/schema": "3.6.5",
+    "@types/node": "18.17.0",
+    "changelogen": "0.5.4",
+    "nuxt": "3.6.5"
+  }
 }
